Updated import paths in index.html to point at compiled files

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,6 +13,6 @@
   <table id="users"></table>
 </main>
 
-<script src="assets/js/script.js"></script>
+<script src="dist/scripts/main.js"></script>
 </body>
 </html>
