Renamed create.php to store.php

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,7 +14,7 @@
     <h2>
       Create user form
     </h2>
-    <form id="createUser" action="/api/users/create.php" method="POST">
+    <form id="createUser" action="/api/users/store.php" method="POST">
       <div class="mb-3">
         <label for="name">name</label>
         <input id="name" name="name">
