Updated markup for the create new user form

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -28,16 +28,23 @@
         <input id="email" name="email">
       </div>
       <div class="mb-3">
-        <label for="address">address</label>
-        <input id="address" name="address">
+        address
+        <label for="address[street]">street</label>
+        <input id="address[street]" name="address[street]">
+        <label for="address[suite]">suite</label>
+        <input id="address[suite]" name="address[suite]">
+        <label for="address[city]">city</label>
+        <input id="address[city]" name="address[city]">
+        <label for="address[zipcode]">zipcode</label>
+        <input id="address[zipcode]" name="address[zipcode]">
       </div>
       <div class="mb-3">
         <label for="phone">phone</label>
         <input id="phone" name="phone">
       </div>
       <div class="mb-3">
-        <label for="company">company</label>
-        <input id="company" name="company">
+        <label for="company[name]">company</label>
+        <input id="company[name]" name="company[name]">
       </div>
       <button type="submit">
         Create new user
